@@ -1,6 +1,8 @@
 package ic.ac.uk.db_pcr_backend.controller;
 
 import java.util.List;
+import java.util.stream.Collector;
+import java.util.stream.Collectors;
 
 import org.gitlab4j.api.models.Project;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -15,7 +17,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import ic.ac.uk.db_pcr_backend.dto.ReviewAssignmentDto;
+import ic.ac.uk.db_pcr_backend.dto.datadto.ReviewAssignmentDto;
 import ic.ac.uk.db_pcr_backend.entity.ReviewAssignmentEntity;
 import ic.ac.uk.db_pcr_backend.service.GitLabService;
 import ic.ac.uk.db_pcr_backend.service.MaintainService;
@@ -25,56 +27,51 @@ import ic.ac.uk.db_pcr_backend.service.MaintainService;
 @PreAuthorize("hasRole('MAINTAINER')")
 public class MaintainController {
 
-    @Autowired
-    private MaintainService maintainSvc;
+        @Autowired
+        private MaintainService maintainSvc;
 
-    @Autowired
-    private GitLabService gitlabSvc;
+        @Autowired
+        private GitLabService gitlabSvc;
 
-    @Value("${gitlab.group.id}")
-    private String groupId;
+        @Value("${gitlab.group.id}")
+        private String groupId;
 
-    @GetMapping("/get-assigned-list")
-    public ResponseEntity<List<ReviewAssignmentDto>> getAssignedList(
-            @RequestParam("projectId") String projectId) throws Exception {
+        @GetMapping("/get-assigned-list")
+        public ResponseEntity<List<ReviewAssignmentDto>> getAssignedList(
+                        @RequestParam("projectId") String projectId) throws Exception {
 
-        List<ReviewAssignmentEntity> saved = maintainSvc.getAssignmentsForProject(projectId);
+                List<ReviewAssignmentEntity> assignments = maintainSvc
+                                .getReviewAssignmentsForProject(Long.valueOf(projectId));
 
-        // map entity → DTO
-        List<ReviewAssignmentDto> dtos = saved.stream()
-                .map(a -> new ReviewAssignmentDto(
-                        a.getAssignmentUuid(),
-                        a.getGroupProjectId(),
-                        a.getProjectName(),
-                        a.getAuthorName(),
-                        a.getReviewerName()))
-                .toList();
+                // map entity → DTO
+                List<ReviewAssignmentDto> dtos = assignments.stream().map(ReviewAssignmentDto::fromEntity)
+                                .collect(Collectors.toList());
 
-        return ResponseEntity.ok(dtos);
-    }
+                return ResponseEntity.ok(dtos);
+        }
 
-    @PostMapping("/assign")
-    public ResponseEntity<List<ReviewAssignmentDto>> assignReviewers(
-            @RequestParam("projectId") String projectId,
-            @RequestParam("reviewerNum") int reviewerNum,
-            @RegisteredOAuth2AuthorizedClient("gitlab") OAuth2AuthorizedClient client) throws Exception {
+        @PostMapping("/assign")
+        public ResponseEntity<List<ReviewAssignmentDto>> assignReviewers(
+                        @RequestParam("projectId") String projectId,
+                        @RequestParam("reviewerNum") int reviewerNum,
+                        @RegisteredOAuth2AuthorizedClient("gitlab") OAuth2AuthorizedClient client) throws Exception {
 
-        String accessToken = client.getAccessToken().getTokenValue();
+                String accessToken = client.getAccessToken().getTokenValue();
 
-        List<ReviewAssignmentEntity> saved = maintainSvc.assignReviewers(groupId, projectId,
-                reviewerNum, accessToken);
+                List<ReviewAssignmentEntity> saved = maintainSvc.assignReviewers(groupId, projectId,
+                                reviewerNum, accessToken);
 
-        // map entity → DTO
-        List<ReviewAssignmentDto> dtos = saved.stream()
-                .map(a -> new ReviewAssignmentDto(
-                        a.getAssignmentUuid(),
-                        a.getGroupProjectId(),
-                        a.getProjectName(),
-                        a.getAuthorName(),
-                        a.getReviewerName()))
-                .toList();
+                // map entity → DTO
+                List<ReviewAssignmentDto> dtos = saved.stream()
+                                .map(a -> new ReviewAssignmentDto(
+                                                a.getAssignmentUuid(),
+                                                a.getGroupProjectId(),
+                                                a.getProjectName(),
+                                                a.getAuthorName(),
+                                                a.getReviewerName()))
+                                .toList();
 
-        return ResponseEntity.ok(dtos);
-    }
+                return ResponseEntity.ok(dtos);
+        }
 
 }
